--- a/app/src/main/res/layout/activity_add_observation.xml
+++ b/app/src/main/res/layout/activity_add_observation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".AddObservationActivity"
+    tools:context=".activities.AddObservationActivity"
     android:background="#164A41">
 
     <LinearLayout
