--- a/app/src/main/res/layout/activity_own_observations.xml
+++ b/app/src/main/res/layout/activity_own_observations.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OwnObservatationsActivity"
+    tools:context=".activities.OwnObservatationsActivity"
     android:background="#164A41">
 
     <LinearLayout
